--- a/project.tex
+++ b/project.tex
@@ -31,7 +31,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{center}
-{\Large \textbf{Project Description:}\\  
+{\Large \textbf{Project Description:}}\\  
 \vspace{.5cm}
 {\LARGE\textbf{Project Name}} 
 \\[.75cm] 
@@ -65,7 +65,8 @@ Clear  and  comprehensible  presentation  of  the  project,  short  characteriza
 	\item[A.1. Instructions.]{Optional subtitle}
 \end{description}
 
-Explain the importance of the problem or critical barrier to progress in the field that the proposed project addresses.
+Explain the importance of the problem or critical barrier to progress in the field that the proposed project addresses 
+\cite{Spahn2011}.
 
 Explain how the proposed project will improve scientific knowledge, technical capability, and/or clinical practice in one or more broad fields.
 
@@ -75,7 +76,7 @@ Describe how the concepts, methods, technologies, treatments, services, or preve
 	\item[A.2. Subheading.]{}
 \end{description}
 
-\begin{wraptable}{l}{5.5cm} % Example table with text wrapping around it
+\begin{wraptable}{l}{5.5cm}\label{tab:example} % Example table with text wrapping around it
 	\caption{Example Table}
 	\begin{center}
 		\begin{tabular}{l l r}
@@ -92,23 +93,21 @@ Describe how the concepts, methods, technologies, treatments, services, or preve
 			\hline 
 		\end{tabular}\\
 		\footnotesize\textsuperscript{a}{All participants clowns.}
-	\end{center}
-	\label{tab:example}
+	\end{center}	
 \end{wraptable}
 
-Referencing a table using it's label: Table \ref{tab:example}. Maecenas consectetur metus at tellus finibus condimentum. Proin arcu lectus, ultrices non tincidunt et, tincidunt ut quam. Integer luctus posuere est, non maximus ante dignissim quis. Nunc a cursus erat. Curabitur suscipit nibh in tincidunt sagittis. Nam malesuada vestibulum quam id gravida. Proin ut dapibus velit. Vestibulum eget quam quis ipsum semper convallis. Duis consectetur nibh ac diam dignissim, id condimentum enim dictum. Nam aliquet ligula eu magna pellentesque, nec sagittis leo lobortis. Aenean tincidunt dignissim egestas. Morbi efficitur risus ante, id tincidunt odio pulvinar vitae. Proin ut dapibus velit. Vestibulum eget quam quis ipsum semper convallis. Duis consectetur nibh ac diam dignissim, id condimentum enim dictum.
+Referencing a table using it's label: Table. Maecenas consectetur metus at tellus finibus condimentum. Proin arcu lectus, ultrices non tincidunt et, tincidunt ut quam. Integer luctus posuere est, non maximus ante dignissim quis. Nunc a cursus erat. Curabitur suscipit nibh in tincidunt sagittis. Nam malesuada vestibulum quam id gravida. Proin ut dapibus velit. Vestibulum eget quam quis ipsum semper convallis. Duis consectetur nibh ac diam dignissim, id condimentum enim dictum. Nam aliquet ligula eu magna pellentesque, nec sagittis leo lobortis. Aenean tincidunt dignissim egestas. Morbi efficitur risus ante, id tincidunt odio pulvinar vitae. Proin ut dapibus velit. Vestibulum eget quam quis ipsum semper convallis. Duis consectetur nibh ac diam dignissim, id condimentum enim dictum.
 
 Curabitur tempus hendrerit nulla. Donec faucibus lobortis nibh pharetra sagittis. Sed magna sem, posuere eget sem vitae, finibus consequat libero. Cras aliquet sagittis erat ut semper. Aenean vel enim ipsum. Fusce ut felis at eros sagittis bibendum mollis lobortis libero. Donec laoreet nisl vel risus lacinia elementum non nec lacus. Nullam luctus, nulla volutpat ultricies ultrices, quam massa placerat augue, ut fringilla urna lectus nec nibh. Vestibulum efficitur condimentum orci a semper. Pellentesque ut metus pretium lacus maximus semper. Sed tellus augue, consectetur rhoncus eleifend vel, imperdiet nec turpis. Nulla ligula ante, malesuada quis orci a, ultricies blandit elit.
 
 In malesuada ullamcorper urna, sed dapibus diam sollicitudin non. Donec elit odio, accumsan ac nisl a, tempor imperdiet eros. Donec porta tortor eu risus consequat, a pharetra tortor tristique. Morbi sit amet laoreet erat. Morbi et luctus diam, quis porta ipsum. Quisque libero dolor, suscipit id facilisis eget, sodales volutpat dolor. Nullam vulputate interdum aliquam. Mauris id convallis erat, ut vehicula neque. Sed auctor nibh et elit fringilla, nec ultricies dui sollicitudin.
 
-\begin{wrapfigure}{r}{8.5cm} % Example figure with text wrapping around it
+\begin{wrapfigure}{r}{8.5cm}\label{fig:example} % Example figure with text wrapping around it
 	\includegraphics[width=8.2cm]{Figures/Fig1.jpg}
-	\caption{\footnotesize Example wrapped figure. (A) Impressive microscopy image. (B) Impressive data.}
-	\label{fig:example}
+	\caption{\footnotesize Example wrapped figure. (A) Impressive microscopy image. (B) Impressive data.}	
 \end{wrapfigure}
 
-Referencing a figure using it's label: Figure \ref{fig:example}. Proin lobortis efficitur dictum. Pellentesque vitae pharetra eros, quis dignissim magna. Sed tellus leo, semper non vestibulum vel, tincidunt eu mi. Aenean pretium ut velit sed facilisis. Ut placerat urna facilisis dolor suscipit vehicula. Ut ut auctor nunc. Nulla non massa eros. Proin rhoncus arcu odio, eu lobortis metus sollicitudin eu. Duis maximus ex dui, id bibendum diam dignissim id. Aliquam quis lorem lorem. Phasellus sagittis aliquet dolor, vulputate cursus dolor convallis vel. Suspendisse eu tellus feugiat, bibendum lectus quis, fermentum nunc. Nunc euismod condimentum magna nec bibendum. Curabitur elementum nibh eu sem cursus, eu aliquam leo rutrum. Sed bibendum augue sit amet pharetra ullamcorper. Aenean congue sit amet tortor vitae feugiat. Vestibulum vestibulum luctus metus venenatis facilisis. Suspendisse iaculis augue at vehicula ornare. Sed vel eros ut velit fermentum porttitor sed sed massa. Fusce venenatis, metus a rutrum sagittis, enim ex maximus velit, id semper nisi velit eu purus.
+Referencing a figure using it's label: Figure. Proin lobortis efficitur dictum. Pellentesque vitae pharetra eros, quis dignissim magna. Sed tellus leo, semper non vestibulum vel, tincidunt eu mi. Aenean pretium ut velit sed facilisis. Ut placerat urna facilisis dolor suscipit vehicula. Ut ut auctor nunc. Nulla non massa eros. Proin rhoncus arcu odio, eu lobortis metus sollicitudin eu. Duis maximus ex dui, id bibendum diam dignissim id. Aliquam quis lorem lorem. Phasellus sagittis aliquet dolor, vulputate cursus dolor convallis vel. Suspendisse eu tellus feugiat, bibendum lectus quis, fermentum nunc. Nunc euismod condimentum magna nec bibendum. Curabitur elementum nibh eu sem cursus, eu aliquam leo rutrum. Sed bibendum augue sit amet pharetra ullamcorper. Aenean congue sit amet tortor vitae feugiat. Vestibulum vestibulum luctus metus venenatis facilisis. Suspendisse iaculis augue at vehicula ornare. Sed vel eros ut velit fermentum porttitor sed sed massa. Fusce venenatis, metus a rutrum sagittis, enim ex maximus velit, id semper nisi velit eu purus.
 
 \begin{description}
 	\item[A.3. Another subheading:]{optional subtitle.}
@@ -162,8 +161,8 @@ Please submit your table of contents /outline of your thesis. Please characteriz
 
 \newpage
 
-\bibliography{NIHGrant} % Use the NIHGrant.bib file for the reference list, replace with your own
-\bibliographystyle{nihunsrt} % Use the custom nihunsrt bibliography style included with the template
+\bibliography{project} % Use the NIHGrant.bib file for the reference list, replace with your own
+\bibliographystyle{abbrv} % Use the custom nihunsrt bibliography style included with the template
 
 %----------------------------------------------------------------------------------------
 
