Added bib entries

--- a/project.bib
+++ b/project.bib
@@ -26,3 +26,112 @@ title = {{Size distribution of particles in Saturn's rings from aggregation and 
 url = {http://arxiv.org/abs/1302.4097 http://dx.doi.org/10.1073/pnas.1503957112},
 year = {2013}
 }
+@article{Haff1983,
+abstract = {The behaviour of granular material in motion is studied from a continuum point of view. Insofar as possible, individual grains are treated as the ‘molecules' of a granular ‘fluid'. Besides the obvious contrast in shape, size and mass, a key difference between true molecules and grains is that collisions of the latter are inevitably inelastic. This, together with the fact that the fluctuation velocity may be comparable to the flow velocity, necessitates explicit incorporation of the energy equation, in addition to the continuity and momentum equations, into the theoretical description. Simple ‘microscopic' kinetic models are invoked for deriving expressions for the ‘coefficients' of viscosity, thermal diffusivity and energy absorption due to collisions. The ‘coefficients' are not constants, but are functions of the local state of the medium, and therefore depend on the local ‘temperature' and density. In general the resulting equations are nonlinear and coupled. However, in the limits ≪d, wheres is the mean separation between neighbouring grain surfaces and is a grain diameter, the above equations become linear and can be solved analytically. An important dependent variable, in this formulation, in addition to the flow velocity u, is the mean random fluctuation ('thermal') velocity v of an individual grain. With a sufficient flux of energy supplied to the system through the boundaries of the container, v can remain non zero even in the absence of flow. The existence of a non uniform v is the means by which energy can be ‘conducted' from one part of the system to another. Because grain collisions are inelastic, there is a natural (damping) lengthscale, governed by the value of d, which strongly influences the functional dependence of v on position. Several illustrative examples of static (u = 0) systems are solved. As an example of grain flow, various Couette type problems are solved analytically. The pressure, shear stress, and ‘thermal' velocity function v are all determined by the relative plate velocity U (and the boundary conditions). If v is set equal to zero at both plates, the pressure and stress are both proportional to U2i.e. the fluid is non-Newtonian. However, if sufficient energy is supplied externally through the walls (v ≠ 0 there), then the forces become proportional to the first power of U. Some examples of Couette flow are given which emphasize the large effect on the grain system properties of even a tiny amount of inelasticity in grain—grain collisions. From these calculations it is suggested that, for the case of Couette flow, the flow of sand is supersonic over most of the region between the confining plates. {\textcopyright} 1983, Cambridge University Press. All rights reserved.},
+author = {Haff, P. K.},
+doi = {10.1017/S0022112083003419},
+file = {:home/yernur/Documents/Fragmentation/Haff_article.pdf:pdf},
+issn = {14697645},
+journal = {Journal of Fluid Mechanics},
+mendeley-groups = {Granular Gases},
+pages = {401--430},
+title = {{Grain flow as a fluid mechanical phenomenon}},
+volume = {134},
+year = {1983}
+}
+@book{Brilliantov2004,
+abstract = {Kinetic gas theory and the transport theory of molecular gases are part of any undergraduate course on classical statistical mechanics. Among others, one of the main preconditions of these theories is the elastic interaction of colliding particles. In 1993 it was first expressed in pioneering articles by Goldhirsch and Zanetti and by McNamara that a gas of particles which collide inelastically be- behaves qualitatively different compared to a molecular gas. Inelasticity of colliding particles is based on the fact that these particles are themselves macroscopic bod- bodies with many degrees of freedom. We call such particles grains and a gas of such particles a granular gas. Mainly triggered by the above-mentioned publications, a persistently increasing number of scientific publications has appeared which reflects an interest in the physics of granular gases that is still growing. By now we have known many interesting properties of granular gases, such as. an inherent cluster instability, non-Maxwellian velocity distribution, spontaneous formation of vortices, anomalous diffusion and others.},
+address = {Oxford},
+author = {Brilliantov, Nikolay and Poeschel, Thorsten},
+file = {:home/yernur/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brilliantov, Poeschel - 2004 - Kinetic Theory of Granular Gases.pdf:pdf},
+keywords = {Books,Granular Matter,Physics},
+mendeley-groups = {Books,Granular Gases},
+mendeley-tags = {Books,Granular Matter,Physics},
+publisher = {Oxford University Press},
+title = {{Kinetic Theory of Granular Gases}},
+year = {2004}
+}
+@article{Garzo2007c,
+abstract = {A hydrodynamic description for an s -component mixture of inelastic, smooth hard disks (two dimensions) or spheres (three dimensions) is derived based on the revised Enskog theory for the single-particle velocity distribution functions. In this first part of the two-part series, the macroscopic balance equations for mass, momentum, and energy are derived. Constitutive equations are calculated from exact expressions for the fluxes by a Chapman-Enskog expansion carried out to first order in spatial gradients, thereby resulting in a Navier-Stokes order theory. Within this context of small gradients, the theory is applicable to a wide range of restitution coefficients and densities. The resulting integral-differential equations for the zeroth- and first-order approximations of the distribution functions are given in exact form. An approximate solution to these equations is required for practical purposes in order to cast the constitutive quantities as algebraic functions of the macroscopic variables; this task is described in the companion paper. {\textcopyright} 2007 The American Physical Society.},
+archivePrefix = {arXiv},
+arxivId = {cond-mat/0702109},
+author = {Garz{\'{o}}, Vicente and Dufty, James W. and Hrenya, Christine M.},
+doi = {10.1103/PhysRevE.76.031303},
+eprint = {0702109},
+file = {:home/yernur/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Garz{\'{o}}, Dufty, Hrenya - 2007 - Enskog theory for polydisperse granular mixtures. I. Navier-Stokes order transport.pdf:pdf},
+issn = {15393755},
+journal = {Physical Review E - Statistical, Nonlinear, and Soft Matter Physics},
+keywords = {Granular Matter,Polydispersity},
+mendeley-groups = {Granular Gases},
+mendeley-tags = {Granular Matter,Polydispersity},
+number = {3},
+primaryClass = {cond-mat},
+title = {{Enskog theory for polydisperse granular mixtures. I. Navier-Stokes order transport}},
+volume = {76},
+year = {2007}
+}
+@article{Osinsky2020,
+abstract = {We investigate numerically and analytically size-polydisperse granular mixtures immersed into a molecular gas. We show that the equipartition of granular temperatures of particles of different sizes is established; however, the granular temperatures significantly differ from the temperature of the molecular gas. This result is surprising since, generally, the energy equipartition is strongly violated in driven granular mixtures. Qualitatively, the obtained results do not depend on the collision model, being valid for a constant restitution coefficient $\epsilon$, as well as for the $\epsilon$ for viscoelastic particles. Our findings may be important for astrophysical applications, such as protoplanetary disks, interstellar dust clouds, and comets.},
+author = {Osinsky, Alexander and Bodrova, Anna S and Brilliantov, Nikolai V},
+doi = {10.1103/PhysRevE.101.022903},
+file = {:home/yernur/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Osinsky, Bodrova, Brilliantov - 2020 - Size-polydisperse dust in molecular gas Energy equipartition versus nonequipartition.pdf:pdf},
+journal = {Physical Review E - Statistical, Nonlinear, and Soft Matter Physics},
+keywords = {Granular Matter,Polydispersity,doi:10.1103/PhysRevE.101.022903 url:https://doi.or},
+mendeley-groups = {Granular Gases},
+mendeley-tags = {Granular Matter,Polydispersity},
+pages = {37--39},
+publisher = {American Physical Society},
+title = {{Size-polydisperse dust in molecular gas : Energy equipartition versus nonequipartition}},
+volume = {022903},
+year = {2020}
+}
+@article{Bodrova2014,
+abstract = {The distribution of granular temperatures in granular gas mixtures is investigated analytically and numerically. We analyze space uniform systems in a homogeneous cooling state (HCS) and under a uniform heating with a mass-dependent heating rate Gk $\sim$ m. k. We demonstrate that for steep size distributions of particles the granular temperatures obey a universal power-law distribution, Tk $\sim$ mak , where the exponent a does not depend on a particular form of the size distribution, the number of species and inelasticity of the grains. Moreover, a is a universal constant for a HCS and depends piecewise linearly on . for heated gases. The predictions of our scaling theory agree well with the numerical results. Copyright {\textcopyright} EPLA, 2014.},
+archivePrefix = {arXiv},
+arxivId = {1403.5284},
+author = {Bodrova, Anna and Levchenko, Denis and Brilliantov, Nikolay},
+doi = {10.1209/0295-5075/106/14001},
+eprint = {1403.5284},
+file = {:home/yernur/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Bodrova, Levchenko, Brilliantov - 2014 - Universality of temperature distribution in granular gas mixtures with a steep particle size di.pdf:pdf},
+issn = {12864854},
+journal = {Epl},
+keywords = {Granular Matter,Polydispersity},
+mendeley-groups = {Granular Gases},
+mendeley-tags = {Granular Matter,Polydispersity},
+number = {1},
+title = {{Universality of temperature distribution in granular gas mixtures with a steep particle size distribution}},
+volume = {106},
+year = {2014}
+}
+@article{Seiss2011,
+author = {Sei{\ss}, Martin and Spahn, Frank},
+file = {:home/yernur/Documents/Fragmentation/Hydrodynamics_of_Saturns_dense_rings.pdf:pdf},
+journal = {Math.Model. Nat. Phenom.},
+mendeley-groups = {Planetary Rings},
+number = {4},
+pages = {191--218},
+title = {{Hydrodynamics of Saturn's Dense Rings}},
+volume = {6},
+year = {2011}
+}
+@article{Spahn2006,
+abstract = {We demonstrate the suitability of a hydrodynamic description of the dynamics of a dense planetary ring considering as an example the viscous oscillatory instability. For the successful application of hydrodynamics the transport coefcients must be known as functions of surface mass density and the granular temperature T of the ring material. We arrange scaling laws for these quantities and use parameters determined from particle simulations of a planetary ring. With such a preparation, the theory predicts an oscillatory instability of a dense ring: waves of radial wavelengths 100m...200m evolve, driven by the combined effects of viscous momentum ux and Coriolis force. These predictions are conrmed by direct particle simulations: wavelengths of the unstable modes, their growth rates, as well as the properties of the eigenfunctions of the perturbations. This success bears the hope to explain a class of so-called ne-structure in Saturn's rings, which are poorly understood to date. The experiments of the Cassini-spacecraft in orbit around Saturn offer the unique chance to identify the predicted density features by analyzing the imaging and occultation data.},
+author = {Spahn, Frank and Schmidt, J{\"{u}}rgen},
+file = {:home/yernur/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Spahn, Schmidt - 2006 - Hydrodynamic Description of Planetary Rings.pdf:pdf},
+journal = {GAMM-Mitt.},
+keywords = {a dense,an example the viscous,astrophysics,be known as functions,for the success-,ful application of hydrodynamics,hydrodynamics,kinetic theory,of,of a hydrodynamic description,of the dynamics of,oscillatory instability,planetary ring considering as,planetary rings,stability,the transport coefficients must,we demonstrate the suitability},
+mendeley-groups = {Planetary Rings},
+number = {1},
+pages = {115 -- 140},
+title = {{Hydrodynamic Description of Planetary Rings}},
+volume = {140},
+year = {2006}
+}
+@inproceedings{Stewart1984,
+author = {Stewartt, Glen R and Lin, D.N.C. and Bodenheimer, Peter},
+booktitle = {IAU Colloq. 75: Planetary Rings},
+file = {:home/yernur/Documents/Mendeley_docs/Granular_Matter/Stewart_Collision_Induced_Transport.pdf:pdf},
+mendeley-groups = {Planetary Rings},
+title = {{Collision-Induced transport processes in planetary rings}},
+year = {1984}
+}
